--- a/tasks/secure-installation.yml
+++ b/tasks/secure-installation.yml
@@ -1,12 +1,24 @@
 ---
-- name: Ensure default user is present.
-  mysql_user:
-    name: "{{ mysql_user_name }}"
-    host: 'localhost'
-    password: "{{ mysql_user_password }}"
-    priv: '*.*:ALL,GRANT'
-    state: present
-  when: mysql_user_name != mysql_root_username
+
+# Has to be after the root password assignment, for idempotency.
+- name: Copy .my.cnf file with root password credentials.
+  template:
+    src: "root-my.cnf.j2"
+    dest: "{{ mysql_root_home }}/.my.cnf"
+    owner: root
+    group: root
+    mode: 0600
+#  when: mysql_install_packages | bool or mysql_root_password_update
+#
+#
+#- name: Ensure default user is present.
+#  mysql_user:
+#    name: "{{ mysql_user_name }}"
+#    host: '%'
+#    password: "{{ mysql_user_password }}"
+#    priv: '*.*:ALL,GRANT'
+#    state: present
+#  when: mysql_user_name != mysql_root_username
 
 # Has to be after the password assignment, for idempotency.
 - name: Copy user-my.cnf file with password credentials.
@@ -15,9 +27,9 @@
     dest: "{{ mysql_user_home }}/.my.cnf"
     owner: "{{ mysql_user_name }}"
     mode: 0600
-  when: >
-    mysql_user_name != mysql_root_username
-    and (mysql_install_packages | bool or mysql_user_password_update)
+#  when: >
+#    mysql_user_name != mysql_root_username
+#    and (mysql_install_packages | bool or mysql_user_password_update)
 
 - name: Disallow root login remotely
   command: 'mysql -NBe "{{ item }}"'
@@ -53,16 +65,6 @@
   when: >
     ((mysql_install_packages | bool) or mysql_root_password_update)
     and ('5.7.' not in mysql_cli_version.stdout and '8.0.' not in mysql_cli_version.stdout)
-
-# Has to be after the root password assignment, for idempotency.
-- name: Copy .my.cnf file with root password credentials.
-  template:
-    src: "root-my.cnf.j2"
-    dest: "{{ mysql_root_home }}/.my.cnf"
-    owner: root
-    group: root
-    mode: 0600
-  when: mysql_install_packages | bool or mysql_root_password_update
 
 - name: Get list of hosts for the anonymous user.
   command: mysql -NBe 'SELECT Host FROM mysql.user WHERE User = ""'
